why we go prohost replecement

--- a/images/desktop.ini
+++ b/images/desktop.ini
@@ -13,3 +13,4 @@ microsoft-intune-logo-new.png=@microsoft-intune-logo-new.png,0
 azure-information-protection-icon-new.png=@azure-information-protection-icon-new.png,0
 stream.png=@stream.png,0
 power-bi.png=@power-bi.png,0
+home-help-icon.png=@home-help-icon.png,0
