change hole site

--- a/images/desktop.ini
+++ b/images/desktop.ini
@@ -14,3 +14,9 @@ azure-information-protection-icon-new.png=@azure-information-protection-icon-new
 stream.png=@stream.png,0
 power-bi.png=@power-bi.png,0
 home-help-icon.png=@home-help-icon.png,0
+additional-providers-icon-1.png=@additional-providers-icon-1.png,0
+additional-providers-icon-2.png=@additional-providers-icon-2.png,0
+additional-providers-icon-3.png=@additional-providers-icon-3.png,0
+additional-providers-icon-4.png=@additional-providers-icon-4.png,0
+what-ssl-certificate-icon.png=@what-ssl-certificate-icon.png,0
+download.png=@download.png,0
