colocation page done

--- a/images/desktop.ini
+++ b/images/desktop.ini
@@ -20,3 +20,6 @@ additional-providers-icon-3.png=@additional-providers-icon-3.png,0
 additional-providers-icon-4.png=@additional-providers-icon-4.png,0
 what-ssl-certificate-icon.png=@what-ssl-certificate-icon.png,0
 download.png=@download.png,0
+colocationconnection.svg=@colocationconnection.svg,0
+redundentpower.svg=@redundentpower.svg,0
+cooling.svg=@cooling.svg,0
