--- a/images/desktop.ini
+++ b/images/desktop.ini
@@ -23,3 +23,12 @@ download.png=@download.png,0
 colocationconnection.svg=@colocationconnection.svg,0
 redundentpower.svg=@redundentpower.svg,0
 cooling.svg=@cooling.svg,0
+usa-data-center-9.jpg=@usa-data-center-9.jpg,0
+usa-data-center-6.jpg=@usa-data-center-6.jpg,0
+usa-data-center-8.jpg=@usa-data-center-8.jpg,0
+usa-data-center-14.jpg=@usa-data-center-14.jpg,0
+usa-data-center-16.jpg=@usa-data-center-16.jpg,0
+usa-data-center-4.jpg=@usa-data-center-4.jpg,0
+usa-data-center-5.jpg=@usa-data-center-5.jpg,0
+bd-8.jpg=@bd-8.jpg,0
+support.svg=@support.svg,0
