fix mobile responsive issues

--- a/images/desktop.ini
+++ b/images/desktop.ini
@@ -32,3 +32,4 @@ usa-data-center-4.jpg=@usa-data-center-4.jpg,0
 usa-data-center-5.jpg=@usa-data-center-5.jpg,0
 bd-8.jpg=@bd-8.jpg,0
 support.svg=@support.svg,0
+our-mission.png=@our-mission.png,0
