fix cloud service issue,footer certificate

--- a/images/desktop.ini
+++ b/images/desktop.ini
@@ -33,3 +33,7 @@ usa-data-center-5.jpg=@usa-data-center-5.jpg,0
 bd-8.jpg=@bd-8.jpg,0
 support.svg=@support.svg,0
 our-mission.png=@our-mission.png,0
+ISO-001-1-150x150.png=@ISO-001-1-150x150.png,0
+ISO-005-1-150x150.png=@ISO-005-1-150x150.png,0
+ISO-004-1-150x150.png=@ISO-004-1-150x150.png,0
+ISO-003-1-150x150.png=@ISO-003-1-150x150.png,0
